--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
 <body>
   <div class="container">
     <header>
-      <!-- شارة العلامة -->
+         <header>
+    <img src="logo.png" alt="Smart Translate">
+    </header>
       <div class="brand">
         <span class="dot"></span>
         <strong>الترجمة الذكية بدون إنترنت</strong>
